Add mobile vers.

--- a/layout/layout.html
+++ b/layout/layout.html
@@ -15,7 +15,9 @@
                 <div><a href="#"><img src="img/sms_48.png"></a></div>
             </address>
             <nav>
-                <ul>
+                <a class="toggle open" href="#ul"><img src="img/menu.png"></a>
+                <ul id="ul">
+                    <a class="toggle close" href="#">Close menu</a>       
                     <li><a href="#">Home</a></li>
                     <li><a href="#">What ISAMA</a></li>
                     <li><a href="#">What we do?</a></li>
